# src/models/Request.ts
@@ -2,9 +2,12 @@ import { Whatsapp } from "@wppconnect-team/wppconnect"
 import Express from "express";
 
 export interface RequestEx extends Express.Request {
-    client: Whatsapp;
+    client?: ClientWhatsApp;
     session?: string;
     token?: string;
-    
-    logger: any;
+    logger?: any;
+}
+
+export interface ClientWhatsApp extends Whatsapp {
+    token?: string;
 }
